--- a/trumpcrawler/crawl/templates/crawl/main.html
+++ b/trumpcrawler/crawl/templates/crawl/main.html
@@ -1,23 +1,13 @@
-
 <html>
 <body>
 
 <div style="width: 100%; overflow: hidden;">
     <div style="width: 600px; float: left;">
-    	{% if headlines_zipped %}
-		    <ul>
-		        {% for index, head in headlines_zipped %}
-			        <p id={{ index }} onclick="get_content('{{ index }}')">{{ head }}</p>
-		        {% endfor %}
-		    </ul>
-		{% else %}
-		    <p>No Trump news are available.</p>
-		{% endif %}
+      <a href="/crawl/cnn">Articles</a>
     </div>
     <div style="margin-left: 620px;"> 
-		<img id="article_thumbnail" src="">
-	    <p id="article_content" ></p>
-	</div>
+      <a href="/crawl/twitter">Tweets</a>
+  </div>
 </div>
 
 
@@ -26,25 +16,4 @@
 </html>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script type="text/javascript">
-
-function get_content(index) {
-	console.log(index);
-	$.ajax({
-      type: "POST",
-      url: "/crawl/cnn/get/content/",
-      data: {
-      	'index': index,
-      	'uris': '{{ uris }}',
-      	'thumbnails': '{{ thumbnails }}',
-      },
-      success: function(response){
-      	content = response['content']
-      	thumbnail = response['thumbnail']
-	    document.getElementById("article_thumbnail").innerHTML = content;
-	    document.getElementById("article_content").src = thumbnail;
-      }
-    });
-
-}
-
 </script>
