--- a/trumpcrawler/crawl/templates/crawl/main.html
+++ b/trumpcrawler/crawl/templates/crawl/main.html
@@ -1,14 +1,23 @@
 
+<style type="text/css">
+div.centre {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 <html>
 <body>
 
-<div style="width: 100%; overflow: hidden;">
-    <div style="width: 600px; float: left;">
-    	<a href="/crawl/cnn">Articles</a>
-    </div>
-    <div style="margin-left: 620px;"> 
-    	<a href="/crawl/twitter">Tweets</a>
-	</div>
+<div class="centre" style="width: 700px; ">
+  <h1>Welcome to TrumpCrawler!</h1>
+  
+  
+  <img src="https://media.giphy.com/media/jSB2l4zJ82Rvq/giphy.gif" width="70%" height="70%">
+  <!-- <img src="http://www.slate.com/content/dam/slate/articles/news_and_politics/politics/2015/08/150810_POL_TrumpFired.jpg.CROP.promo-xlarge2.jpg" width="70%" height="70%"> -->
+  <br>
+  <a href="/crawl/cnn">Articles</a>
+  <a href="/crawl/twitter">Tweets</a>
 </div>
 
 
